--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "Honeyswap Info",
-  "name": "View statistics for Honeyswap exchanges.",
+  "short_name": "SparkSwap Info",
+  "name": "View statistics for SparkSwap exchanges.",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
