--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "uniswap-info",
-  "version": "0.1.0",
+  "name": "sparkswap-info",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "https://uniswap.info",
+  "homepage": "https://sparkswap.info",
   "dependencies": {
     "@popperjs/core": "^2.4.2",
     "@reach/portal": "^0.10.3",
@@ -28,6 +28,7 @@
     "ethers": "^4.0.39",
     "export-to-csv": "^0.2.1",
     "feather-icons": "^4.24.1",
+    "gh-pages": "^3.1.0",
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.1",
     "jazzicon": "^1.5.0",
@@ -78,7 +79,9 @@
     "fix:all": "yarn fix:lint && yarn fix:format",
     "check:lint": "yarn lint:base",
     "check:format": "yarn format:base --check",
-    "check:all": "yarn check:lint && yarn check:format"
+    "check:all": "yarn check:lint && yarn check:format",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
